--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,10 +1,55 @@
+.App {
+    width: 65%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 5%;
+    padding: 2%;
+}
+
+.header {
+    align-items: center;
+    padding: 2%;
+}
+
+.add-btn {
+    background-color: indigo;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5%;
+}
+.input {
+    background-color: lightcoral;
+    color: white;
+}
+
+.todo-list {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 100%; 
+    margin: 0 auto;  
+}
 .todo {
     background-color: hotpink;
-    width: 40%;
-    text-align: center;    
+    width: 35%;
+    text-align: center;
+    margin: 4px 0;
+    border-radius: 5%;
+    border: 1px solid white;
+    cursor: pointer;
 }
 
 .todo.completed {
     background-color: pink;
     text-decoration: line-through;
+}
+
+.clear-btn {
+    background-color: indigo;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5%;
+    margin-top: 16px;
 }
